Cleanup. korbi_sparkle more deobf

--- a/solumbus/index.html
+++ b/solumbus/index.html
@@ -15,65 +15,20 @@
     <meta property="og:description" content="bio link service">
     <link rel="canonical" href="https://southside.cc">
     <link rel="shortcut icon" href="./assets/1146.png" type="image/png">
-
-    <!--
-    <script disable-devtool-auto src="https://korbi.cc/cdn/js/disable-devtool.js"></script>
-    <script disable-devtool-auto src="https://cdn.jsdelivr.net/npm/disable-devtool@latest"></script>
-    -->
-
     <link rel="stylesheet" href="./korbi_config.css">
-    <script src="./korbi_title.js"></script>
-
-    <!--
-    <script src="https://korbi.cc/cdn/js/disable-inspect.js"></script>
-    <script disable-devtool-auto src="https://korbi.cc/cdn/js/disable-devtool.js"></script>
-    <script disable-devtool-auto src="https://cdn.jsdelivr.net/npm/disable-devtool@latest"></script>
-    -->
+    <link rel="stylesheet" href="./korbi_style.css">
 </head>
 
 <body>
-    <!--
-    <script disable-devtool-auto src="https://korbi.cc/cdn/js/disable-devtool.js"></script>
-    <script disable-devtool-auto src="https://cdn.jsdelivr.net/npm/disable-devtool@latest"></script>
-    -->
-
-    <!--
-    <script disable-devtool-auto src="https://korbi.cc/cdn/js/disable-devtool.js"></script>
-    <script disable-devtool-auto src="https://cdn.jsdelivr.net/npm/disable-devtool@latest"></script>
-    -->
+    <b class="footer">
+        <a href="https://southside.cc">southside.cc</a>
+    </b>
     <script src="./korbi_libary.js"></script>
-    <!--
-    <script src="https://korbi.cc/cdn/js/disable-inspect.js"></script>
-    -->
-    <!--
-    <script disable-devtool-auto src="https://korbi.cc/cdn/js/disable-devtool.js"></script>
-    -->
-    <link rel="stylesheet" href="./korbi_style.css">
-    <!--
-    <script disable-devtool-auto src="https://korbi.cc/cdn/js/disable-devtool.js"></script>
-    <script disable-devtool-auto src="https://cdn.jsdelivr.net/npm/disable-devtool@latest"></script>
-    -->
-
+    <script src="./korbi_title.js"></script>
     <script src="./config.js"></script>
-
-    <!--
-    <script disable-devtool-auto src="https://korbi.cc/cdn/js/disable-devtool.js"></script>
-    <script disable-devtool-auto src="https://cdn.jsdelivr.net/npm/disable-devtool@latest"></script>
-    -->
     <script src="./pre.js"></script>
     <script src="./korbi_script.js"></script>
     <script src="./korbi_sparkle.js"></script>
-    <!--
-    <script disable-devtool-auto src="https://korbi.cc/cdn/js/disable-devtool.js"></script>\n
-    <script disable-devtool-auto src="https://cdn.jsdelivr.net/npm/disable-devtool@latest"></script>
-    -->
-
-    <b class="footer"><a href="https://southside.cc">southside.cc</a></b>
-
-    <!--
-    <script disable-devtool-auto src="https://korbi.cc/cdn/js/disable-devtool.js"></script>
-    <script disable-devtool-auto src="https://cdn.jsdelivr.net/npm/disable-devtool@latest"></script>
-    -->
 </body>
 
 </html>
